[project]
name = "flow-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.10"
dependencies = [
    "jupyter>=1.1.1",
    "matlabengine>=25.2.2",
    "matplotlib>=3.10.8",
    "nibabel>=5.3.3",
    "numpy>=2.4.2",
    "plotly>=6.5.2",
    "pydicom>=3.0.1",
    "pyevtk>=1.6.0",
    "pynrrd>=1.1.3",
    "pyvista>=0.46.5",
    "scikit-image>=0.26.0",
    "scipy>=1.17.0",
    "tqdm>=4.67.2",
]
